--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       border: none;
       cursor: pointer;
       border-radius: 5px;
+      padding-right: 15px; /* Añadido padding-right */
       transition: background-color 0.3s ease;
     }
 
@@ -251,7 +252,7 @@
       background-color: #f0f0f0;
       box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
       padding: 15px;
-      text-align: left; /* Alineado a la izquierda */
+      text-align: center; /* Centramos los elementos de la leyenda */
       transition: transform 0.3s ease;
       transform: translateY(100%); /* Oculto inicialmente */
       z-index: 1000;
